[gd_scene load_steps=9 format=3 uid="uid://ci7ybul62nisu"]

[ext_resource type="Script" path="res://Tornado.gd" id="1_gp2oq"]
[ext_resource type="Texture2D" uid="uid://cwp7rc3jej5pq" path="res://Assets/potions/tornado/Tornado.png" id="2_b2ads"]
[ext_resource type="Texture2D" uid="uid://dajwh8n0dkhdx" path="res://Assets/potions/tornado/TornadoVictim.png" id="3_xn3vt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5l62l"]
radius = 20.0
height = 62.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32u4c"]
size = Vector2(7.5, 56)

[sub_resource type="Animation" id="Animation_lumar"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TornadoVictim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_3k3pk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TornadoVictim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5j25"]
_data = {
"RESET": SubResource("Animation_3k3pk"),
"idle": SubResource("Animation_lumar")
}

[node name="Tornado" type="CharacterBody2D"]
collision_layer = 0
slide_on_ceiling = false
script = ExtResource("1_gp2oq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b2ads")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5l62l")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-17.295, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_32u4c")
debug_color = Color(0.996078, 0, 0.164706, 0.419608)

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(20, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_32u4c")
debug_color = Color(0.996078, 0, 0.164706, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5j25")
}
autoplay = "idle"

[node name="TornadoVictim" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xn3vt")
hframes = 6

[node name="changeDirection" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="changeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
